# module-uuid

./: .gitignore  .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  README-BINARIES  RELEASE-NOTES  configure.ac  qore-uuid-module.spec
docs/: Doxyfile.in  doxyfile.tmpl  mainpage.doxygen.tmpl  uuid-module-doc.html
src/: Makefile.am  QC_UUID.qpp  single-compilation-unit.cpp  uuid-module.cpp  uuid-module.h
test/: uuid-test.q  uuid-test.qtest
test/docker_test/: test-alpine.sh  test-ubuntu.sh  test.sh
